
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int mach_msg_header_t ;
typedef scalar_t__ kern_return_t ;


 int lock_a ;
 scalar_t__ lock_b ;
 scalar_t__ mach_msg_send (int *) ;

void* thread_func(void* arg) {
  lock_a = 1;
  while(lock_b == 0) {;}
  kern_return_t err = mach_msg_send((mach_msg_header_t*)arg);
  return (void*) err;
}
