; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_46299.c_thread_func.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_46299.c_thread_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lock_a = common dso_local global i32 0, align 4
@lock_b = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @thread_func(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  store i32 1, i32* @lock_a, align 4
  br label %4

4:                                                ; preds = %7, %1
  %5 = load i64, i64* @lock_b, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %4
  br label %4

8:                                                ; preds = %4
  %9 = load i8*, i8** %2, align 8
  %10 = bitcast i8* %9 to i32*
  %11 = call i64 @mach_msg_send(i32* %10)
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %3, align 8
  %13 = inttoptr i64 %12 to i8*
  ret i8* %13
}

declare dso_local i64 @mach_msg_send(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
